--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: CI (Jira cloud example with GH action, report results to Test Plan - demo)
 on:
   workflow_dispatch:
-    inputs:
+    parameters:
       test:
         description: 'Test Plan issue key'
         required: false
