--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,12 @@ on:
       test:
         description: 'Test Plan issue key'
         required: false
-        default: echo"{{test}}"
+        default: ""
+      tests:
+        description: 'Test Plan'
+        required: false
+        type: string
+        default: echo "{{test}}"
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
