--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ on:
         description: 'Test Plan'
         required: false
         type: string
-        default: echo "{{test}}"
+        default: ""
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -39,6 +39,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+      - name: Run a multi-line
+        run: echo "{{test}}"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
