--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Run a multi-line
-        run: echo "{{test}}"
+        run: echo ${{github.event.inputs.test}}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
