--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,23 @@ on:
         description: 'Test Plan issue key'
         required: false
         default: ""
+      ISSUE_KEY:
+        description: 'Test Plan issue key'
+        required: false
+        default: ""
+      TESTS_KEY:
+        description: 'Test Plan issue key'
+        required: false
+        default: ""
+      PROJECT_KEY:
+        description: 'Test Plan issue key'
+        required: false
+        default: ""
+      USER:
+        description: 'Test Plan issue key'
+        required: false
+        default: ""
+        
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -35,7 +52,12 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Run a multi-line
-        run: echo ${{github.event.inputs.test}}
+        run: |
+           echo ${{github.event.inputs.test}}
+           echo ${{github.event.inputs.ISSUE_KEY}}
+           echo ${{github.event.inputs.TESTS_KEY}}
+           echo ${{github.event.inputs.PROJECT_KEY}}
+           echo ${{github.event.inputs.USER}}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
